# allvm

./: .gitignore  LICENSE  README.md  build.cpp
aVMPInterpreter/: aVMPInterpreter.bc  aVMPInterpreter.c  aVMPInterpreter.h
clang/include/clang-c/: Index.h
clang/lib/Basic/: Version.cpp
clang/lib/Driver/: CMakeLists.txt  Driver.cpp
lld/ELF/: Driver.cpp
llvm/lib/Analysis/: IR2Vec.cpp
llvm/lib/Passes/: PassBuilder.cpp  PassBuilderPipelines.cpp  PassRegistry.def
llvm/lib/Transforms/Obfuscation/: AProtect.cpp  BanDump.cpp  CMakeLists.txt  ConstantFPEncryption.cpp  ConstantIntEncryption.cpp  CryptoUtils.cpp  Flattening.cpp  HideMaps.cpp  HostsDetect.cpp  IdaDetect.cpp  IndirectBranch.cpp  IndirectCall.cpp  IndirectGlobalVariable.cpp  InlineHookDetect.cpp  LdPreloadProtect.cpp  LegacyLowerSwitch.cpp  LicenseManager.cpp  MemDetect.cpp  MemProtect.cpp  MicrosoftRTTIEraser.cpp  NoRootDetect.cpp  ObfuscationOptions.cpp  ObfuscationPassManager.cpp  PltHookDetect.cpp  ProxyDetect.cpp  PtraceDetect.cpp  RootDetect.cpp  StringEncryption.cpp  StringEncryption.cpp.bak  SyscallProtect.cpp  TimeDetect.cpp  UsbProtect.cpp  Utils.cpp  VmProtectDetect.cpp  VpnDetect.cpp  aVMP.cpp  xVMP.cpp.bak
llvm/lib/Transforms/Scalar/: LoopInterchange.cpp
llvm/tools/OLLVM-UI/: CMakeLists.txt  CodeEditor.cpp  CodeEditor.h  ConfigManager.cpp  ConfigManager.h  HelpDocument.cpp  HelpDocument.h  LicenseGenerator.cpp  LicenseGenerator.h  MainTab.cpp  MainTab.h  MainWindow.cpp  MainWindow.h  main.cpp  resources.qrc
llvm/tools/llvm-objcopy/: llvm-objcopy.cpp
(+25 files in other folders)
